# smartnews-news-service

./: .gitignore  Dockerfile  README.md  config.example.toml  pyproject.toml  requirements.txt
src/: main.py  server.py  setup.py
src/news_service/: __init__.py
src/news_service/llms/: ollama.py  prompt.py
src/news_service/news/: duckduckgo.py
src/news_service/scraper/: beautifulsoup.py  config.py
src/news_service/vectorstores/: qdrant.py
