[project]
name = "news-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.9.2",
    "toml>=0.10.2",
    "duckduckgo-search>=6.2.12",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "ollama>=0.3.3",
    "qdrant-client>=1.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
